--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.1",
   "description": "Discord HTTP Interaction Wrapper",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "(node build.js & tsc) && dts-bundle-generator -o dist/types.d.ts dist/index.d.ts",
+    "clean": "rimraf dist"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,9 @@
   "bugs": {
     "url": "https://github.com/SpecialAgency-Chat/lipcord/issues"
   },
+  "files": [
+    "dist"
+  ],
   "homepage": "https://github.com/SpecialAgency-Chat/lipcord#readme",
   "dependencies": {
     "discord-api-types": "^0.37.48",
@@ -25,9 +31,14 @@
     "hono": "^3.3.0"
   },
   "devDependencies": {
+    "@types/events": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "dts-bundle-generator": "^8.0.1",
+    "esbuild": "^0.18.13",
     "eslint": "^8.44.0",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "rimraf": "^5.0.1",
+    "typescript": "^5.1.6"
   }
 }
